Fixed jumping nav items in carousel

--- a/public/styles/_bootstrap-overrides.less
+++ b/public/styles/_bootstrap-overrides.less
@@ -83,27 +83,45 @@ h1, h2 {
 	width: auto;
 	padding-left: 0;
 	margin-left: 0;
+	margin-bottom: 40px;
+	margin-top: 30px;
 	text-align: center;
 	list-style: none;
 	}
 
 .carousel-indicators li {
 	display: inline-block;
+	position: relative;
 	width: auto;
 	height: auto;
-	margin: 0;
+	margin: 0 20px;
 	text-indent: 0;
 	cursor: pointer;
 	background-color: transparent;
 	background-color: transparent;
 	border: 0;
+	border-bottom: 4px solid @mainColor;
 	border-radius: 0;
+	font-weight: 300;
 	}
+
+	.carousel-indicators li .caret { display: none; }
 
 .carousel-indicators .active {
 	width: auto;
 	height: auto;
-	margin: 0;
+	margin: 0 20px;
 	background-color: transparent;
+	border-color: @brand-primary;
 	}
+
+	.carousel-indicators .active .caret { 
+		display: block;
+		border-color-left: @brand-primary;
+		border-color-right: @brand-primary;
+		text-align: center;
+		position: absolute;
+		left: 45%;
+		bottom: -15px;
+		}
 /* /Reset */
