--- a/public/styles/_custom.less
+++ b/public/styles/_custom.less
@@ -109,32 +109,7 @@ input[type="submit"]:hover { background-color: @brand-contrast; }
 		}
 
 /* carousel overrides how-to */
-.slide-nav {
-	margin-bottom: 40px;
-	margin-top: 30px;
-	}
 
-	.slide-nav li {
-		font-weight: 300;
-		padding: 0 4px 4px;
-		margin: 0 15px 10px;
-		border-bottom: 4px solid @mainColor;
-		position: relative;
-		}
-
-		.slide-nav li .caret { display: none; }
-
-		.slide-nav li.active .caret { 
-			display: block;
-			border-color-left: @brand-primary;
-			border-color-right: @brand-primary;
-			text-align: center;
-			position: absolute;
-			left: 45%;
-			bottom: -15px;
-			}
-
-	.slide-nav li.active { border-color: @brand-primary; }
 
 /* Header */
 .page-header { 
